# film_parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
movie_scraper/movie_scraper/: middlewares.py  settings.py
movie_scraper/movie_scraper/spiders/: movie_spider.py
